# Styletts2_inferencer

./: .gitignore  MANIFEST.in  pyproject.toml  readme.md
src/styletts2_inferencer/: .gitignore  __init__.py  __main__.py  models.py
