[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "styletts2-inferencer"
# version = "0.0.1"  # Remove any existing version parameter.
dynamic = ["version"]
description = "Uses StyleTTS2 for TTS-ing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "SoundFile==0.12.*", # TODO Specify version
    "torch==2.1.*",
    "torchaudio==0.16.*",
    "munch==4.0.*",    
    "pydub==0.25.*",
    "pyyaml==6.*",
    "librosa==0.10.*", 
    "nltk==3.8.*", 
    "accelerate==0.24.*", 
    "transformers==4.*",  
    "einops==0.*",  
    "einops-exts==0.0.*", 
    "tqdm==4.*", 
    "typing==3.7.*", 
    "typing-extensions==4.8.*", 
    "monotonic-align@git+https://github.com/thaije/monotonic_align.git", 
    "phonemizer==3.2.*",  
    "scipy==1.11.*",
    "GitPython==3.1.*"               
]

[tool.setuptools_scm]
# Set the (relative) location of the Git root repository 
# root = "."

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
test-styletts2 = "styletts2_inferencer:main"